# domainguard

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: main.py
app/: config.py  db.py  glue.py  main.py
app/api/: domain.py  health.py
app/services/: __init__.py  whois.py
tests/app/: test_main.py
