[project]
name = "domainguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pex>=2.50.1",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-whois>=0.9.5",
    "sqlalchemy[asyncio]>=2.0.42",
    "uvicorn>=0.35.0",
]
